# doom-nukem

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  doom-nukem-old  level-0  level-1  level-2  level-3  level-4  level-5  level-6  level-7  level-7_invalidinteraction  level-9  sdl_path.sh
assets/: bg.xpm  cannon_64.xpm  pillar_64.xpm  texture_spritesheet.xpm
editor_includes/: doomnukem_editor.h  error.h  export.h  player.h  sectors.h
editor_srcs/: app.c  editor.c  editor_menu.c  editor_ui.c  events_activate_interaction.c  events_activate_interaction_decor.c  events_activate_interaction_object.c  events_activate_interaction_sector.c  events_dispatch.c  events_inventory.c  events_keyup.c  events_menu.c  events_mouse.c  events_mouse_track.c  events_mouse_wheel.c  events_sector.c  exit.c  export.c  export_assets.c  export_assets_surface.c  export_async.c  export_object.c  export_player.c  export_sector.c  font.c  image.c  import.c  import_async.c  import_interaction.c  import_player.c  import_sector.c  interaction_checks.c  interaction_tools.c  interactions.c  level_validation_sector.c  linedraw.c  linedraw_utils.c  list_tools.c  lists.c  loading_screen.c  (+37 more)
fonts/: doom-nukem_font.pixil
includes/: assets.h  config.h  doomnukem.h  engine.h  error.h  events.h  geometry.h  interactions.h  player.h
libft/: Makefile
liblinearalgebra/: Makefile
srcs/: OLD_TESTDATA.c  TESTDATA.c  animation_create.c  animation_progress.c  app.c  audio.c  bullet_collisions.c  bullet_fire.c  bullet_object_collisions.c  bullet_wall_collisions.c  bullets.c  button_function.c  conf.c  (+128 more)
(+170 files in other folders)
